--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+     background-image: url("myimage/book.jpg");
+     background-repeat: no-repeat;
+     background-size: cover;
+ }
