--- a/app/views/libraryans/index.html.erb
+++ b/app/views/libraryans/index.html.erb
@@ -1,18 +1,26 @@
-<table border="1px">
-   <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Phone</th>
-      <th colspan="2">Action</th>
-   </tr>
-   <tr>
-      <% @libraryan.each do |library|%>
-       <td> <%= library.name %></td>
-       <td> <%= library.age %></td>
-       <td> <%= library.phone%></td>
-       <td> <%= link_to "Edit", edit_libraryan_path(library.id),class:"btn btn-primary"%></td>
-       <td><%= link_to 'Destroy',libraryan_path(library.id),method: :delete,class:"btn btn-primary"%></td>
+<%= link_to 'Add_book',new_book_path,class:"btn btn-primary"%><br>
+<table class="table">
+
+     <tr>
+        <th>Book_Name</th>
+        <th>Author</th>
+        <th>Title</th>
+        <th colspan=3>Action</th>
+     </tr>
     
-   </tr>
-   <%end%>
-</table>
+       <% @books.each do |book|%>
+    <tr>
+       <td> <%= book.book_name%></td>
+       <td> <%= book.author_name%></td>
+       <td> <%= book.title%></td>
+       <td> <%= link_to 'EditBook',edit_book_path(book),class:"btn btn-primary"%></td>
+       <td> <%= link_to 'destroy',book,method: :delete,class:"btn btn-primary"%></td>
+    </tr>
+    
+     <%end%>
+     <%= will_paginate @books, renderer: BootstrapPagination::Rails %>
+
+    
+</table><br><br><br><br>
+
+
