--- a/app/views/rentels/index.html.erb
+++ b/app/views/rentels/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Rentel#index</h1>
-<p>Find me in app/views/rentel/index.html.erb</p>
+<%= link_to 'Issued Books',bookissues_index_path,class:"btn btn-primary"%><br>
+<table class="table">
+     <tr>
+        <th>Book_Name</th>
+        <th>Author</th>
+        <th>Title</th>
+        <th colspan=2>Action</th>
+     </tr>
+    
+       <% @books.each do |book|%>
+    <tr>
+       <td> <%= book.book_name%></td>
+       <td> <%= book.author_name%></td>
+       <td> <%= book.title%></td>
+       <td><%= link_to 'add to cart',book_issue_path(book.id), method: :get,class:"btn btn-primary" %></td>
+    </tr>
+     <%end%>
+</table><br><br><br>
