--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,26 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Library</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
+        
         <li class="nav-item">
         <% unless user_signed_in? %>
-          <li><%= link_to "Libraryan Registration",new_libraryan_path, class:"btn btn-primary"%></li>
-          <li><%= link_to "Rental Registration",new_rentel_path, class:"btn btn-primary"%></li>
+          <li><%= link_to "Libraryan Registration",new_libraryan_path, class:"nav-link active"%></li>
+          <li><%= link_to "Rental Registration",new_rentel_path, class:"nav-link active"%></li>
           <li><%= link_to "Login", new_user_session_path, class:"btn btn-primary"%></li>
         <% else %>
 
-        <% if current_user.type_id_type == "libraryan" %>
-            <li><%= link_to 'libraryan', libraryan_path(current_user.type_id),class:"btn btn-primary" %></li>
+        <% if current_user.type_id_type == "Libraryan" %>
+            <li><%= link_to 'libraryan',libraryan_path(current_user.type_id_id),class:"btn btn-primary" %></li>
            
         <% else %>
-            <li><%= link_to 'Rental', rentel_path(current_user.type_id),class:"btn btn-primary" %></li>
+            <li><%= link_to 'Rentel', rentel_path(current_user.type_id_id),class:"btn btn-primary" %></li>
         <% end %>
             <li><%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-success" %></li>
        <% end %>
