adding payment gateway

--- a/app/views/bookissues/index.html.erb
+++ b/app/views/bookissues/index.html.erb
@@ -5,10 +5,10 @@
   <th>Author-Name</th>
   <th>Title</th>
   <th>Price</th>
-  <th>Issue-Date</th>
+  <th>Issue-Date</th> 
   <th colspan="2">Action</th>
 </tr>
-
+  <% i=0%>
    <% @bookissues.each do |bookissue|%>
     <tr>
    
@@ -17,6 +17,7 @@
     <td><%= bookissue.book.title%></td>
     <td><%= bookissue.book.price%></td>
     <td><%= bookissue.issue_date%></td>
+    <% i=i+ bookissue.book.price.to_i%>
   
     <td><%= link_to 'Destroy',bookissue,method: :delete,class:"btn btn-primary"%></td>
   
@@ -24,3 +25,6 @@
    
 </tr>
 </table>
+
+<h1>Total Price :<%= i%></h1>
+<%= button_to 'Pay Now',charges_path%>
