--- a/app/views/libraryans/index.html.erb
+++ b/app/views/libraryans/index.html.erb
@@ -1,3 +1,4 @@
+<br>
 <%= link_to 'Add_book',new_book_path,class:"btn btn-primary"%><br>
 <table class="table">
 
@@ -5,7 +6,8 @@
         <th>Book_Name</th>
         <th>Author</th>
         <th>Title</th>
-        <th colspan=3>Action</th>
+     
+        <th colspan=5>Action</th>
      </tr>
     
        <% @books.each do |book|%>
@@ -15,12 +17,15 @@
        <td> <%= book.title%></td>
        <td> <%= link_to 'EditBook',edit_book_path(book),class:"btn btn-primary"%></td>
        <td> <%= link_to 'destroy',book,method: :delete,class:"btn btn-primary"%></td>
+       <tr>
+          <td><%= image_tag(book.avatar ,width:"20%")if book.avatar.attached?%></td>
+       </tr>
+      
     </tr>
+   
     
      <%end%>
-     <%= will_paginate @books, renderer: BootstrapPagination::Rails %>
-
-    
+   
 </table><br><br><br><br>
 
-
+<%= will_paginate @books %>
